force-app/main/default/objects/Chapter_Report__c/Chapter_Report__c.object-meta.xml
<CustomObject>
    <label>Chapter Report</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Chapter Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chapter Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>