force-app/main/default/objects/Chapter_Report__c/fields/Chapter_12_Complete__c.field-meta.xml
<CustomField>
    <fullName>Chapter_12_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chapter 12 Complete</label>
    <type>Checkbox</type>
</CustomField>