force-app/main/default/objects/Chapter_Report__c/fields/Youth_in_Program_Report__c.field-meta.xml
<CustomField>
    <fullName>Youth_in_Program_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Youth in Program Report</label>
    <referenceTo>Youth_in_Program_Report__c</referenceTo>
    <relationshipLabel>Chapter Reports</relationshipLabel>
    <relationshipName>Chapter_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>