force-app/main/default/objects/Chapter_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Youth_in_Program_Report__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>